fixed alignment of buttons in game.html

--- a/game.css
+++ b/game.css
@@ -50,19 +50,18 @@ body {
 
 #restartGame{
   margin-top:11%;
-  margin-left: 7%;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
   width:100px;
 }
 
-#resultForm{
+/*#resultForm{
   position:fixed;
   margin-left:725px;
   margin-top:400px;
 
-}
+}*/
 
 #startButtonPic,#paused,#gameOverPic{
   margin-left: 400px;
@@ -75,7 +74,6 @@ body {
 
 #submitScoreBtn{
   margin-top:26%;
-  margin-left: 7%;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
